--- a/doc/paper/01_绪论.md
+++ b/doc/paper/01_绪论.md
@@ -1,8 +1,17 @@
 #绪论
 
 ##目录：
-1.JavaScript简介与历史。
-2.JavaScript异步在工程中所带来的问题。
-3.JavaScript异步现有的解决方案对比。并且存在那些问题？
+1.JavaScript简介
+2.JavaScript单线程异步
+3.JavaScript异步现有的解决方案对比
 
-##1.JavaScript的简介与历史
+##1.JavaScript的简介
+
+JavaScript是一个轻量级解释型向对象但却将函数视为语言中一级公民的编程语言。JavaScript同时支持基于原型的面向对象编程、命令式编程风格和函数式编程风格，是一种基于原型的、多范式的动态脚本语言。
+
+JavaScript由网景公司雇佣的Brendan Eich实现。它的名字借鉴了当时大行其道的Java并且命名为JavaScript，基本语法借鉴C语言与Java，数据结构借鉴了Java，函数借鉴了Scheme和Awk，将函数视为一等公民，并且引入了闭包概念。原型链的继承模式借鉴了Self语言。正则表达式则借鉴了Perl。一些函数和方法借鉴了Python。但是为了保持简单，语言本身缺少了一些关键功能，比如命名空间、模块等。但是因为语言的动态特性，这些语言都是可以利用现有的功能实现的。所以也造就了学习别的语言通常是学习如何使用语言的功能，而学习JavaScript通常是学习各种解决问题的模式。
+
+JavaScript最常被用在编写网页脚本上，但是随着Google的V8引擎的发布，JavaScript的效率被瞬间提高了降级20倍，并且接近原生代码的执行速度。现在JavaScirpt已经别运用在了各个领域当中，比如用于开发移动智能的应用、桌面计算机上的应用、服务器上的应用、游戏引擎中的脚本，跟甚至跟随这Intel进入了嵌入式应用的领域。比起Java，JavaScript最接近当年Java对世人许下的承诺：“一处编写，到处运行”。
+
+##2.JavaScript的单线程异步
+
